@@ -1,3 +1,8 @@
+Tue Apr  6 14:03:18 1999  msolomon  <msolomon@fido.seva.net>
+
+	* WeatherNOAA.pm:
+	A Moore Reported value not added to the forecast item if there was a "..." - fixed.
+
 Thu Apr  1 22:21:03 1999  msolomon  <msolomon@fido.seva.net>
 
 	* WeatherNOAA.pm: Inside get_city_zone() we're no longer looking for
